--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "title": "SB Admin",
-    "name": "startbootstrap-sb-admin",
+    "title": "Fitter",
+    "name": "fitter-app",
     "version": "5.0.3",
     "description": "A one page app landing page HTML theme for Bootstrap.",
     "keywords": [
@@ -14,31 +14,27 @@
         "app"
     ],
     "scripts": {
-        "start": "gulp dev"
+        "prestart": "gulp default",
+        "start": "babel-node build/server.js",
+        "dev": "gulp dev"
     },
-    "homepage": "https://startbootstrap.com/template-overviews/sb-admin",
-    "bugs": {
-        "url": "https://github.com/BlackrockDigital/startbootstrap-sb-admin/issues",
-        "email": "feedback@startbootstrap.com"
-    },
-    "license": "MIT",
-    "author": "Start Bootstrap",
-    "contributors": [
-        "David Miller (http://davidmiller.io/)"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/BlackrockDigital/startbootstrap-sb-admin.git"
-    },
+    
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.7.0",
         "bootstrap": "4.2.1",
         "chart.js": "2.7.3",
         "datatables.net-bs4": "1.10.19",
+        "express": "^4.16.4",
         "jquery": "3.3.1",
-        "jquery.easing": "^1.4.1"
+        "jquery.easing": "^1.4.1",
+        "path": "^0.12.7"
     },
     "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-core": "6.17.0",
+        "babel-preset-env": "^1.7.0",
+        "babel-register": "6.16.3",
+        "babel-loader": "^7.1.4",
         "browser-sync": "2.26.3",
         "gulp": "^4.0.0",
         "gulp-autoprefixer": "^6.0.0",
